# latex-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  main.tex
.github/workflows/: build.yml
sections/: introduction.tex
