load("@bazel_latex//:latex.bzl", "latex_document")

latex_document(
    name = "main",
    main = "main.tex",
    srcs = glob(["sections/*.tex"]) + 
           glob(["images/*"], allow_empty = True) + [
        "main.tex",
        "@bazel_latex//packages:graphicx",
        "@bazel_latex//packages:amsmath",
        "@bazel_latex//packages:amssymb",
        "@bazel_latex//packages:amsthm",
        "@bazel_latex//packages:algorithm2e",
        "@bazel_latex//packages:listings",
        "@bazel_latex//packages:xcolor",
        "@bazel_latex//packages:hyperref",
        "@bazel_latex//packages:cleveref",
    ],
)
